# XClone

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  pyproject.toml  release.sh  setup.py
docs/: API.rst  FAQ.rst  about.rst  conf.py  getting_started.rst  index.rst  installation.rst  manual.rst  preprocessing.rst  references.bib  references.rst  release.rst  requirements.txt  tutorials.rst
docs/image/: notes.md
docs/tutorial_data/: barcodes_sample.tsv  cell_anno_sample.csv  hg38_blocks_sample.csv  hg38_genes_sample.csv
xclone/: __init__.py  _config.py  _logging.py
xclone/analysis/: __init__.py  _clustering.py  _quickanalysis.py  _spatial.py  benchmark.py  evaluation.py  extract.py  utils.py
xclone/data/: __init__.py
xclone/model/: HMM_BB.py  HMM_NB.py  HMM_base.py  XClone_combine.py  _BAF.py  _BAF_base.py  _BAF_process.py  _Gaussian_mixture.py  _HMM.py  _RDR_CNVratio.py  _RDR_base.py  _RDR_cnv.py  _RDR_dispersion.py  _RDR_gaussian_HMM.py  _RDR_gaussian_base.py  _RDR_libratio.py  _RDR_process.py  _RDR_smoothing.py  __init__.py  _denoise.py  _pipeline_utils.py  analysis_utils.py  base_utils.py  clustering.py  data_base_utils.py  diploid.py  mixture.py  phasing.py  preprocessing_utils.py  smoothing.py  utils.py  xclone_baf_wrap.py  xclone_combine_wrap.py  xclone_rdr_gaussian.py  xclone_rdr_wrap.py  xclone_run_wrap.py
xclone/plot/: CNV_plot.py  _BAF_debug.py  _BAF_plot.py  _RDR_plot.py  __init__.py  _base_manhattan.py  _base_xanndata.py  _data.py  _demo_plot.py  _explore.py  _plot_style.py  _spatial_plot.py  _test.py  _utils.py  _visualize.py  base_plot.py  (+4 more)
(+37 files in other folders)
