[tool.poetry]
name = "xclone"
version = "0.4.0"
description = "XClone: Inference of clonal Copy Number Alterations in single cells"
authors = ["Rongting Huang <rthuang@connect.hku.hk>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
anndata = "^0.10.7"
statsmodels = "^0.14.2"
scanpy = "^1.10.1"
h5py = "^3.11.0"
palettable = "^3.3.3"
requests = "^2.32.3"
importlib-metadata = "^7.1.0"
squidpy = "^1.5.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.1.1"
nbsphinx = "^0.9.4"
sphinxcontrib-bibtex = "^2.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
